--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -45,12 +45,12 @@
                         <button hx-get="/faculty/add_subject/{{faculty}}/{{semester}}" hx-target="body" class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500"> Add subject </button>
                     </div> {% endcomment %}
                     <div class="flex items-center gap-4">
-                        <button  class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 show-modal"> Add subject </button>
-                        <div class="modal h-screen w-full fixed left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden">
+                        <button  class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 showModal"> Add subject </button>
+                        <div class="myModal h-screen w-full fixed left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden">
                             <div class="bg-white rounded shadow-lg w-1/3">
                                 <div class="border-b px-4 py-2 flex justify-between items-center">
                                     <h3 class="font-semibold text-lg">Add Subject</h3>
-                                    <button class="text-black close-modal text-4xl hover:text-teal-600">&times;</button>
+                                    <button class="text-black closeModal text-4xl hover:text-teal-600">&times;</button>
                                 </div>
                                 <form class="space-y-6" action="#">
                                     <div class="p-3">
@@ -65,7 +65,7 @@
         
                                     </div>
                                     <div class="flex justify-end items-center w-100 border-t p-3">
-                                        <button class="bg-gray-400  px-3 py-1 rounded text-white mr-1 close-modal">Cancel</button>
+                                        <button class="bg-gray-400  px-3 py-1 rounded text-white mr-1 closeModal">Cancel</button>
                                         <button class="bg-teal-600 hover:bg-teal-700 px-3 py-1 rounded text-white">Add</button>
                                     </div>
                                 </form>
@@ -120,17 +120,17 @@
         </div>
     </div>
     <script>
-        const modal = document.querySelector('.modal');
-        const showModal = document.querySelector('.show-modal');
-        const closeModal = document.querySelectorAll('.close-modal');
+        const myModal = document.querySelector('.myModal');
+        const show = document.querySelector('.showModal');
+        const close = document.querySelectorAll('.closeModal');
 
-        showModal.addEventListener('click', function(){
-            modal.classList.remove('hidden');
-            modal.classList.add('flex');
+        show.addEventListener('click', function(){
+            myModal.classList.remove('hidden');
+            myModal.classList.add('flex');
         });
-        closeModal.forEach(close =>{
+        close.forEach(close =>{
             close.addEventListener('click', function(){
-                modal.classList.add('hidden');
+                myModal.classList.add('hidden');
             })
         })
     </script>
