--- a/account/templates/adash.html
+++ b/account/templates/adash.html
@@ -1,46 +1,61 @@
 {% include 'navbar.html' %} {% load static %}
 
 <head>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="{% static 'images/style.css' %}">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="{% static 'images/style.css' %}" />
 </head>
 
+<!-- Changes in main-div makes popup not work!! -->
+
 <body>
-    <div class="relative flex flex-col items-center justify-center ">
-        <div class="grid mt-32  gap-8 grid-cols-1 md:grid-cols-3 xl:grid-cols-3">
-            {% for course in courses %}
-            <a href="{% url 'students-by-semester' course 1 %}">
-                <div class="flex flex-col">
-                    <div class="bg-white shadow-md  rounded-3xl p-4">
-                        <div class="flex-none lg:flex">
-                            <div class=" h-full w-full lg:h-48 lg:w-48   lg:mb-0 mb-3">
-                                <img src="{% static 'images/csit.jpg' %}" alt="Image" class=" w-full  object-scale-down lg:object-cover  lg:h-48 rounded-2xl">
-                            </div>
-                            <div class="flex-auto ml-3 justify-evenly py-2">
-                                <div class="flex flex-wrap ">
-                                    <h2 class="flex-auto text-lg font-medium">{{course|upper}}</h2>
-                                </div>
-                                <p class="mt-3"></p>
-                                <div class="flex py-4  text-sm text-gray-500">
-                                    <div class="flex-1 inline-flex items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                                        </svg>
-                                        <p class="">6:30 AM - 11:30 AM</p>
-                                    </div>
-                                </div>
-                                <div class="flex p-4 pb-2 border-t border-gray-200 "></div>
-                            </div>
-                        </div>
-                    </div>
+  <div class="flex flex-col items-center justify-center" id="main-div">
+    <div class="grid mt-32 gap-8 grid-cols-1 md:grid-cols-3 xl:grid-cols-3">
+      {% for course in courses %}
+      <a href="{% url 'students-by-semester' course 1 %}">
+        <div class="flex flex-col">
+          <div class="bg-white shadow-md rounded-3xl p-4">
+            <div class="flex-none lg:flex">
+              <div class="h-full w-full lg:h-48 lg:w-48 lg:mb-0 mb-3">
+                <img
+                  src="{% static 'images/csit.jpg' %}"
+                  alt="Image"
+                  class="w-full object-scale-down lg:object-cover lg:h-48 rounded-2xl"
+                />
+              </div>
+              <div class="flex-auto ml-3 justify-evenly py-2">
+                <div class="flex flex-wrap">
+                  <h2 class="flex-auto text-lg font-medium">
+                    {{course|upper}}
+                  </h2>
                 </div>
-            </a>
-
-            {% endfor %}
-
-
-
+                <p class="mt-3"></p>
+                <div class="flex py-4 text-sm text-gray-500">
+                  <div class="flex-1 inline-flex items-center">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-5 w-5 mr-2 text-gray-400"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                      ></path>
+                    </svg>
+                    <p class="">6:30 AM - 11:30 AM</p>
+                  </div>
+                </div>
+                <div class="flex p-4 pb-2 border-t border-gray-200"></div>
+              </div>
+            </div>
+          </div>
         </div>
+      </a>
+
+      {% endfor %}
     </div>
+  </div>
 </body>
