--- a/account/templates/sdash.html
+++ b/account/templates/sdash.html
@@ -1,37 +1,16 @@
-{% include 'navbar.html' %} {% comment %}
-<div class="pt-2 text-center">
-    <span class="font-semibold px-5 py-5 rounded-md text-2xl">Welcome {{user.first_name}} {{user.last_name}}</span
-  >
-  <span
-    ><br />
-    {{user.faculty}} {{user.semester}} <sup>th</sup> semester</span
-  >
-</div>
-{% endcomment %} {% comment %} <br />
-<br />
-<h1 class="text-lg font-semibold">YOUR SUBJECTS</h1>
-{% for subject in subjects %}
+{% include 'navbar.html' %}
 
-<a href="{% url 'subject-detail' subject %}">{{subject}}</a> {% endfor %}
 
-<br />
-{% endcomment %} {% comment %} {% endcomment %}
 
-<link
-  rel="stylesheet"
-  href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
-/>
-<section
-  class="h-auto pt-3 flex font-medium items-center justify-center w-full p-10"
->
-  <div class="grid gap-8">
-    <div class="grid content-center justify-items-center gap-3">
-      <div class="break-all text-center">
-        <h1 class="text-3xl darktext font-bold text-center">
-          Welcome {{user.first_name}} {{user.last_name}}
-        </h1>
-        <span class="font-semi-bold text-lg"
-          ><br />
+<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
+<section class="h-auto pt-3 flex font-medium items-center justify-center w-full p-10">
+    <div class="grid gap-8">
+        <div class="grid content-center justify-items-center gap-3">
+            <div class="break-all text-center">
+                <h1 class="text-3xl darktext font-bold text-center">
+                    Welcome {{user.first_name}} {{user.last_name}}
+                </h1>
+                <span class="font-semi-bold text-lg"><br />
           {{user.faculty}} {{user.semester}} <sup>th</sup> semester</span
         >
       </div>
@@ -48,34 +27,34 @@
             <span class="text-4xl mr-4"
               ><i class="uil uil-file-check-alt"></i
             ></span>
-    <h3 class="text-xl font-bold text-gray-900 text-center">
-        Attendance
-    </h3>
-</div>
-</a>
-</div>
-<div class="bg-white hover:shadow-lg rounded-lg">
-    <a class="relative block rounded-md border border-gray-100 p-8 shadow-xl w-[350px] h-[250px]" href="">
-        <div class="flex items-center mt-4 text-teal-600 sm:pr-8">
-            <span class="text-4xl mr-4"><i class="uil uil-schedule"></i></span>
-            <h3 class="text-xl font-bold text-gray-900 text-center">
-                Notice Board
-            </h3>
+                <h3 class="text-xl font-bold text-gray-900 text-center">
+                    Attendance
+                </h3>
+            </div>
+            </a>
         </div>
-    </a>
-</div>
-<div class="bg-white hover:shadow-lg rounded-lg">
-    <a class="relative block rounded-md border border-gray-100 p-8 shadow-xl w-[350px] h-[250px]" href="">
-        <div class="flex items-center mt-4 text-teal-600 sm:pr-8">
-            <span class="text-4xl mr-4"><i class="uil uil-book-open"></i></span>
-            <h3 class="text-xl font-bold text-gray-900 text-center">
-                Assignments
-            </h3>
+        <div class="bg-white hover:shadow-lg rounded-lg">
+            <a class="relative block rounded-md border border-gray-100 p-8 shadow-xl w-[350px] h-[250px]" href="">
+                <div class="flex items-center mt-4 text-teal-600 sm:pr-8">
+                    <span class="text-4xl mr-4"><i class="uil uil-schedule"></i></span>
+                    <h3 class="text-xl font-bold text-gray-900 text-center">
+                        Notice Board
+                    </h3>
+                </div>
+            </a>
         </div>
-    </a>
-</div>
-</div>
-</div>
+        <div class="bg-white hover:shadow-lg rounded-lg">
+            <a class="relative block rounded-md border border-gray-100 p-8 shadow-xl w-[350px] h-[250px]" href="">
+                <div class="flex items-center mt-4 text-teal-600 sm:pr-8">
+                    <span class="text-4xl mr-4"><i class="uil uil-book-open"></i></span>
+                    <h3 class="text-xl font-bold text-gray-900 text-center">
+                        Assignments
+                    </h3>
+                </div>
+            </a>
+        </div>
+    </div>
+    </div>
 </section>
 
 <div class="notice-board grid justify-items-center content-center gap-5 w-screen">
