--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -1,137 +1,234 @@
 {% include 'navbar.html' %}
 
-
-
 <body>
-    <div>
-        <div class=" h-auto w-full flex items-center justify-center pt-5 mb-20 lg:mb-0">
-            <div class="bg-gray-50 h-auto lg:p-6 p-4 flex justify-center items-center w-full max-w-[95%] lg:max-w-[1200px] shadow-lg">
-                <div class="flex-col flex md:flex-row py-10 lg:py-0 mx-5 gap-6 md:mx-0 md:gap-0 md:justify-evenly w-full">
-                    <div class="relative inline-flex flex-col">
-                        <div class="inline-flex items-center gap-4">
-                            <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdown">Semesters<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
-                        </div>
-                        <div class=" static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdown">
-                            <ul class="" aria-labelledby="dropdown">
-                                {% for i in semesters %}
-                                <li>
-                                    <a href="{% url 'students-by-semester' faculty i %}" class=" px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap">Semester {{i}}</a>
-                                </li>
-                                {% endfor %}
+  <div>
+    <div
+      class="h-auto w-full flex items-center justify-center pt-5 mb-20 lg:mb-0"
+    >
+      <div
+        class="bg-gray-50 h-auto lg:p-6 p-4 flex justify-center items-center w-full max-w-[95%] lg:max-w-[1200px] shadow-lg"
+      >
+        <div
+          class="flex-col flex md:flex-row py-10 lg:py-0 mx-5 gap-6 md:mx-0 md:gap-0 md:justify-evenly w-full"
+        >
+          <div class="relative inline-flex flex-col">
+            <div class="inline-flex items-center gap-4">
+              <button
+                class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex"
+                data-dropdown-toggle="dropdown"
+              >
+                Semesters<svg
+                  class="w-4 h-7 ml-2"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M19 9l-7 7-7-7"
+                  ></path>
+                </svg>
+              </button>
+            </div>
+            <div
+              class="static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden"
+              id="dropdown"
+            >
+              <ul class="" aria-labelledby="dropdown">
+                {% for i in semesters %}
+                <li>
+                  <a
+                    href="{% url 'students-by-semester' faculty i %}"
+                    class="px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap"
+                    >Semester {{i}}</a
+                  >
+                </li>
+                {% endfor %}
+              </ul>
+            </div>
+          </div>
+          <div class="relative inline-flex flex-col">
+            <div class="inline-flex items-center gap-4">
+              <button
+                class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex"
+                data-dropdown-toggle="dropdoown"
+              >
+                Subjects<svg
+                  class="w-4 h-7 ml-2"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M19 9l-7 7-7-7"
+                  ></path>
+                </svg>
+              </button>
+            </div>
+            <div
+              class="static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden"
+              id="dropdoown"
+            >
+              <ul class="" aria-labelledby="dropdoown">
+                {% for subject in subjects %}
+                <li>
+                  <a
+                    href="{% url 'subject-detail' subject %}"
+                    class="px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap"
+                    >{{subject}}</a
+                  >
+                </li>
+                {% endfor %}
+              </ul>
+            </div>
+          </div>
 
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="relative inline-flex flex-col">
-                        <div class="inline-flex items-center gap-4">
-                            <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdoown">Subjects<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
-                        </div>
-                        <div class=" static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdoown">
-                            <ul class="" aria-labelledby="dropdoown">
-                                {% for subject in subjects %}
-                                <li>
-                                    <a href="{% url 'subject-detail' subject %}" class=" px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap">{{subject}}</a>
-                                </li>
-                                {% endfor %}
+          <div class="flex items-center gap-4">
+            <button
+              hx-get="/add_account/{{faculty}}/{{semester}}"
+              hx-target="body"
+              class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500"
+            >
+              Add account
+            </button>
+          </div>
 
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="flex items-center gap-4">
-                        <button hx-get="/add_account/{{faculty}}/{{semester}}" hx-target="body" class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500">Add account</button>
-                    </div>
-                    {% comment %} <div class="flex items-center gap-4">
-                        <button hx-get="/faculty/add_subject/{{faculty}}/{{semester}}" hx-target="body" class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500"> Add subject </button>
-                    </div> {% endcomment %}
-                    <div class="flex items-center gap-4">
-                        <button  class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 showModal"> Add subject </button>
-                        <div class="myModal h-screen w-full fixed left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden">
-                            <div class="bg-white rounded shadow-lg w-1/3">
-                                <div class="border-b px-4 py-2 flex justify-between items-center">
-                                    <h3 class="font-semibold text-lg">Add Subject</h3>
-                                    <button class="text-black closeModal text-4xl hover:text-teal-600">&times;</button>
-                                </div>
-                                <form class="space-y-6" action="#">
-                                    <div class="p-3">
-                                        <div>
-                                            <label for="subject-name" class="block mb-2 text-sm font-medium text-black">Name</label>
-                                            <input type="text" name="subject-name" id="subject-name" class="bg-gray-50 border border-gray-300 text-black text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5"  required>
-                                        </div>
-                                        <div>
-                                            <label for="teacher-name" class="block mb-2 text-sm font-medium text-black ">Teacher</label>
-                                            <input type="text" name="teacher-name" id="teacher-name"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
-                                        </div>
-        
-                                    </div>
-                                    <div class="flex justify-end items-center w-100 border-t p-3">
-                                        <button class="bg-gray-400  px-3 py-1 rounded text-white mr-1 closeModal">Cancel</button>
-                                        <button class="bg-teal-600 hover:bg-teal-700 px-3 py-1 rounded text-white">Add</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+          <div class="flex items-center gap-4">
+            <button
+              class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 showModal"
+            >
+              Add subject
+            </button>
+            <div
+              class="myModal h-screen w-full fixed left-0 top-0 justify-center items-center bg-black bg-opacity-50 hidden"
+            >
+              <div class="bg-white rounded shadow-lg w-1/3">
+                <div
+                  class="border-b px-4 py-2 flex justify-between items-center"
+                >
+                  <h3 class="font-semibold text-lg">Add Subject</h3>
+                  <button
+                    class="text-black closeModal text-4xl hover:text-teal-600"
+                  >
+                    &times;
+                  </button>
                 </div>
+                <form class="space-y-6" action="#">
+                  <div class="p-3">
+                    <div>
+                      <label
+                        for="subject-name"
+                        class="block mb-2 text-sm font-medium text-black"
+                        >Name</label
+                      >
+                      <input
+                        type="text"
+                        name="subject-name"
+                        id="subject-name"
+                        class="bg-gray-50 border border-gray-300 text-black text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5"
+                        required
+                      />
+                    </div>
+                    <div>
+                      <label
+                        for="teacher-name"
+                        class="block mb-2 text-sm font-medium text-black"
+                        >Teacher</label
+                      >
+                      <input
+                        type="text"
+                        name="teacher-name"
+                        id="teacher-name"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="flex justify-end items-center w-100 border-t p-3">
+                    <button
+                      class="bg-gray-400 px-3 py-1 rounded text-white mr-1 closeModal"
+                    >
+                      Cancel
+                    </button>
+                    <button
+                      class="bg-teal-600 hover:bg-teal-700 px-3 py-1 rounded text-white"
+                    >
+                      Add
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
+          </div>
         </div>
-        <div>
-            <div class="text-center text-lg font-bold mt-4">
-                Semester {{semester}}
-            </div>
-            <div id="table-div" class="flex justify-center pt-5">
-                <div class="flex items-center justify-center">
-                    <table class="table-auto border border-gray-300 mx-auto">
-
-                        <thead>
-                            <tr class="bg-gray-100">
-                                <th class="px-8 py-2 border-r border-gray-400">Username</th>
-                                <th class="px-8 py-2 border-r border-gray-400">First Name</th>
-                                <th class="px-8 py-2 border-r border-gray-400">Last Name</th>
-                                <th class="px-8 py-2 border-r border-gray-400">Email</th>
-                                <th class="px-8 py-2 border-r border-gray-400">Phone Number</th>
-                                <th class="px-8 py-2 border-r border-gray-400">Address</th>
-                                <th class="px-8 py-2 border-r border-gray-400">Faculty</th>
-                                <th class="px-8 py-2 border-r border-gray-400">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for student in students %}
-                            <tr class="hover:bg-gray-50">
-                                <td class="border px-4 py-2">{{student.username}}</td>
-                                <td class="border px-4 py-2">{{student.first_name}}</td>
-                                <td class="border px-4 py-2">{{student.last_name}}</td>
-                                <td class="border px-4 py-2">{{student.email}}</td>
-                                <td class="border px-4 py-2">{{student.phone_number}}</td>
-                                <td class="border px-4 py-2">{{student.address}}</td>
-                                <td class="border px-4 py-2">{{student.faculty}}</td>
-                                <td class="border px-4 py-2">
-                                    <!-- <button hx-post="/delete_account/{{student.username}}" hx-target="#table-div">Delete</button> -->
-                                    <a class="hover:text-teal-500" href="{% url 'delete-account' student.username%}">
-                                        Delete
-                                    </a>
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-    <script>
-        const myModal = document.querySelector('.myModal');
-        const show = document.querySelector('.showModal');
-        const close = document.querySelectorAll('.closeModal');
+    <div>
+      <div class="text-center text-lg font-bold mt-4">
+        Semester {{semester}}
+      </div>
+      <div id="table-div" class="flex justify-center pt-5">
+        <div class="flex items-center justify-center">
+          <table class="table-auto border border-gray-300 mx-auto">
+            <thead>
+              <tr class="bg-gray-100">
+                <th class="px-8 py-2 border-r border-gray-400">Username</th>
+                <th class="px-8 py-2 border-r border-gray-400">First Name</th>
+                <th class="px-8 py-2 border-r border-gray-400">Last Name</th>
+                <th class="px-8 py-2 border-r border-gray-400">Email</th>
+                <th class="px-8 py-2 border-r border-gray-400">Phone Number</th>
+                <th class="px-8 py-2 border-r border-gray-400">Address</th>
+                <th class="px-8 py-2 border-r border-gray-400">Faculty</th>
+                <th class="px-8 py-2 border-r border-gray-400">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for student in students %}
+              <tr class="hover:bg-gray-50">
+                <td class="border px-4 py-2">{{student.username}}</td>
+                <td class="border px-4 py-2">{{student.first_name}}</td>
+                <td class="border px-4 py-2">{{student.last_name}}</td>
+                <td class="border px-4 py-2">{{student.email}}</td>
+                <td class="border px-4 py-2">{{student.phone_number}}</td>
+                <td class="border px-4 py-2">{{student.address}}</td>
+                <td class="border px-4 py-2">{{student.faculty}}</td>
+                <td class="border px-4 py-2">
+                  <!-- <button hx-post="/delete_account/{{student.username}}" hx-target="#table-div">Delete</button> -->
+                  <a
+                    class="hover:text-teal-500"
+                    href="{% url 'delete-account' student.username%}"
+                  >
+                    Delete
+                  </a>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script>
+    const myModal = document.querySelector(".myModal");
+    const show = document.querySelector(".showModal");
+    const close = document.querySelectorAll(".closeModal");
 
-        show.addEventListener('click', function(){
-            myModal.classList.remove('hidden');
-            myModal.classList.add('flex');
-        });
-        close.forEach(close =>{
-            close.addEventListener('click', function(){
-                myModal.classList.add('hidden');
-            })
-        })
-    </script>
+    show.addEventListener("click", function () {
+      myModal.classList.remove("hidden");
+      myModal.classList.add("flex");
+    });
+    close.forEach((close) => {
+      close.addEventListener("click", function () {
+        myModal.classList.add("hidden");
+      });
+    });
+  </script>
 </body>
