--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -41,7 +41,35 @@
 
 
                                     <div class="border-t border-gray-100"></div>
-                                    <a href="{% url 'change-password' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Change Password</a>
+                                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900 showModal">Change Password</a>
+                                    
+                                        <div class="myModal h-screen w-full fixed left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden">
+                                            <div class="bg-white rounded shadow-lg w-1/3">
+                                                
+                                                <form class="space-y-6" action="#">
+                                                    <div class="p-3">
+                                                        <div>
+                                                            <label for="current-password" class="block mb-2 text-sm font-medium text-black">Current password</label>
+                                                            <input type="password" name="current-password" id="current-password" class="bg-gray-50 border border-gray-300 text-black text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5"  required>
+                                                        </div>
+                                                        <div>
+                                                            <label for="new-password" class="block mb-2 text-sm font-medium text-black ">New password</label>
+                                                            <input type="password" name="new-password" id="new-password"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
+                                                        </div>
+                                                        <div>
+                                                            <label for="confirm-password" class="block mb-2 text-sm font-medium text-black ">Confirm password</label>
+                                                            <input type="password" name="confirm-password" id="confirm-password"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
+                                                        </div>
+                        
+                                                    </div>
+                                                    <div class="flex justify-end items-center w-100 border-t p-3">
+                                                        <button class="bg-gray-400  px-3 py-1 rounded text-white mr-1 closeModal">Cancel</button>
+                                                        <button class="bg-teal-600 hover:bg-teal-700 px-3 py-1 rounded text-white">Submit</button>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    
                                     <div class="border-t border-gray-100"></div>
                                     <a href="{% url 'logout-page' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-teal-600" role="menuitem">Logout</a>
                                 </div>
