--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -43,7 +43,7 @@
                                     <div class="border-t border-gray-100"></div>
                                     <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900 showModal">Change Password</a>
                                     
-                                        <div class="myModal h-screen w-full fixed left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden">
+                                        <div class="myModal h-screen w-full fixed z-10 inset-0 overflow-y-auto left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden">
                                             <div class="bg-white rounded shadow-lg w-1/3">
                                                 
                                                 <form class="space-y-6" action="#">
