added contents in sdash

--- a/account/templates/sdash.html
+++ b/account/templates/sdash.html
@@ -19,52 +19,67 @@
         <h2 class="text-3xl font-bold mb-4">Assignments</h2>
         <div class="grid grid-flow-row sm:grid-cols-2 gap-10 grid-cols-1 content-center justify-items-center lg:grid-cols-3">
             <div class="bg-white hover:shadow-lg  rounded-lg">
-                <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[250px] overflow-hidden overflow-y-auto">
+                <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[250px]  overflow-hidden overflow-y-auto"id=about >
                     <div class=" items-center mt-4 h-full justify-center ">
                         
                         <h3 class="text-xl font-semibold text-teal-600 text-center">
                             Pending
                         </h3>
-                        <div class="pt-2 justify center text-justify">
-                            my name is lalala i am doing lalala lorem lahstb cniw jhsud sjdhoh This course covers the 
-                            fundamentals of physics including oscillations, electromagnetic theory, and basics of quantum 
-                            mechanics, band theory, semiconductors and universal logic gates and finally physics of manufacturing 
-                            integrated circuits. also haynajh agy agy bhguh 
-
+                        <div class=" pt-2 justify center text-justify">
+                            <div class="flex">
+                                <p class="font-semibold">Complete cg assignment and also do something for ca as well</p>
+                                <button>
+                                    <svg style="color: rgb(0, 137, 123);" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"> <path fill-rule="evenodd" clip-rule="evenodd" d="M0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15 11.6421 11.6421 15 7.5 15C3.35786 15 0 11.6421 0 7.5ZM7.0718 10.7106L11.3905 5.31232L10.6096 4.68762L6.92825 9.2893L4.32012 7.11586L3.67993 7.88408L7.0718 10.7106Z" fill="#00897b"></path> </svg>
+                                </button>
+                            </div>
+                            <hr>
+                            <br>
+                            <div class="flex">
+                                <p class="font-semibold">Complete cg assignment and also do something for ca as well</p>
+                                <button>
+                                    <svg style="color: rgb(0, 137, 123);" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"> <path fill-rule="evenodd" clip-rule="evenodd" d="M0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15 11.6421 11.6421 15 7.5 15C3.35786 15 0 11.6421 0 7.5ZM7.0718 10.7106L11.3905 5.31232L10.6096 4.68762L6.92825 9.2893L4.32012 7.11586L3.67993 7.88408L7.0718 10.7106Z" fill="#00897b"></path> </svg>
+                                </button>
+                            </div>
+                            <hr>
+                            <br>
+                            <div class="flex">
+                                <p class="font-semibold">Complete cg assignment and also do something for ca as well</p>
+                                <button>
+                                    <svg style="color: rgb(0, 137, 123);" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"> <path fill-rule="evenodd" clip-rule="evenodd" d="M0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15 11.6421 11.6421 15 7.5 15C3.35786 15 0 11.6421 0 7.5ZM7.0718 10.7106L11.3905 5.31232L10.6096 4.68762L6.92825 9.2893L4.32012 7.11586L3.67993 7.88408L7.0718 10.7106Z" fill="#00897b"></path> </svg>
+                                </button>
+                            </div>
+                            <hr>
+                            <br>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="bg-white hover:shadow-lg  rounded-lg">
-                <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[250px] overflow-hidden overflow-y-auto">
+                <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[250px] overflow-hidden overflow-y-auto"id=about>
                     <div class=" items-center mt-4 h-full justify-center ">
                         
                         <h3 class="text-xl font-semi-bold text-teal-600 text-center">
                             Submitted
                         </h3>
                         <div class="pt-2 justify center text-justify">
-                            my name is lalala i am doing lalala lorem lahstb cniw jhsud sjdhoh This course covers the 
-                            fundamentals of physics including oscillations, electromagnetic theory, and basics of quantum 
-                            mechanics, band theory, semiconductors and universal logic gates and finally physics of manufacturing 
-                            integrated circuits. also haynajh agy agy bhguh 
-
+                            <p class="font-semibold">Complete cg assignment and also do something for ca as well</p>
+                            <hr>
+                            <br>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="bg-white hover:shadow-lg  rounded-lg">
-                <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[250px] overflow-hidden overflow-y-auto">
+                <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[250px] overflow-hidden overflow-y-auto"id=about>
                     <div class=" items-center mt-4 h-full justify-center ">
                         
                         <h3 class="text-xl font-semibold text-teal-600 text-center">
                             Missed
                         </h3>
                         <div class="pt-2 justify center text-justify">
-                            my name is lalala i am doing lalala lorem lahstb cniw jhsud sjdhoh This course covers the 
-                            fundamentals of physics including oscillations, electromagnetic theory, and basics of quantum 
-                            mechanics, band theory, semiconductors and universal logic gates and finally physics of manufacturing 
-                            integrated circuits. also haynajh agy agy bhguh 
-
+                            <p class="font-semibold">Complete cg assignment and also do something for ca as well</p>
+                            <hr>
+                            <br>
                         </div>
                     </div>
                 </div>
