added notice board and removed scroll-bar

--- a/account/templates/sdash.html
+++ b/account/templates/sdash.html
@@ -86,7 +86,51 @@
             </div>
         </div>
     </div>
+    <div>
+        <h2 class="text-3xl font-bold mb-4">Notice Board</h2>
+        <div class="bg-white hover:shadow-lg  rounded-lg">
+            <div class="relative  rounded-md border border-gray-100 p-4 shadow-xl w-full h-[250px] overflow-hidden overflow-y-auto"id=about>
+                <div class="pt-2 justify center text-justify">
+                    <p class="font-semibold">Complete cg assignment and also do something for ca as well</p>
+                    <hr>
+                    <br>
+                </div>
+                <div class="pt-2 justify center text-justify">
+                    <p class="font-semibold">Complete cg assignment and also do something for ca as well</p>
+                    <hr>
+                    <br>
+                </div>
+                <div class="pt-2 justify center text-justify">
+                    <p class="font-semibold">Complete cg assignment and also do something for ca as well</p>
+                    <hr>
+                    <br>
+                </div>
+                <div class="pt-2 justify center text-justify">
+                    <p class="font-semibold">Complete cg assignment and also do something for ca as well</p>
+                    <hr>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+<style>
+/* hide scrollbar for chrome,safari*/
+#about::-webkit-scrollbar{
+    display: none;
+}
+
+/* hide scrollbar for firefox*/
+#about{
+  scrollbar-width: none;
+}
+
+/* hide scrollbar for Edge, IE*/
+#about{
+  -ms-overflow-style: none;
+}
+
+</style>
 
 {% comment %} <div class="notice-board grid justify-items-center content-center gap-5 w-screen">
     <h1>NOTICE BOARD</h1>
