--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -102,12 +102,12 @@
 
           <div class="flex items-center gap-4">
             <button
-              class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 showModal"
+              class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 showSub"
             >
               Add subject
             </button>
             <div
-              class="myModal h-screen w-full fixed left-0 top-0 justify-center items-center bg-black bg-opacity-50 hidden"
+              class="subject h-screen w-full fixed left-0 top-0 justify-center items-center bg-black bg-opacity-50 hidden"
             >
               <div class="bg-white rounded shadow-lg w-1/3">
                 <div
@@ -115,7 +115,7 @@
                 >
                   <h3 class="font-semibold text-lg">Add Subject</h3>
                   <button
-                    class="text-black closeModal text-4xl hover:text-teal-600"
+                    class="text-black closeSub text-4xl hover:text-teal-600"
                   >
                     &times;
                   </button>
@@ -153,7 +153,7 @@
                   </div>
                   <div class="flex justify-end items-center w-100 border-t p-3">
                     <button
-                      class="bg-gray-400 px-3 py-1 rounded text-white mr-1 closeModal"
+                      class="bg-gray-400 px-3 py-1 rounded text-white mr-1 closeSub"
                     >
                       Cancel
                     </button>
@@ -217,17 +217,17 @@
     </div>
   </div>
   <script>
-    const myModal = document.querySelector(".myModal");
-    const show = document.querySelector(".showModal");
-    const close = document.querySelectorAll(".closeModal");
+    const subject = document.querySelector(".subject");
+    const showsub = document.querySelector(".showSub");
+    const closesub = document.querySelectorAll(".closeSub");
 
-    show.addEventListener("click", function () {
-      myModal.classList.remove("hidden");
-      myModal.classList.add("flex");
+    showsub.addEventListener("click", function () {
+      subject.classList.remove("hidden");
+      subject.classList.add("flex");
     });
-    close.forEach((close) => {
+    closesub.forEach((close) => {
       close.addEventListener("click", function () {
-        myModal.classList.add("hidden");
+        subject.classList.add("hidden");
       });
     });
   </script>
