--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -5,94 +5,34 @@
     <title>Log in</title>
 </head>
 
-<body>
-    {% for message in messages %} {{message}} {% endfor %} {% include 'navbar.html' %} {% if form.errors %}
-    <div class="alert alert-danger">
-        {% for field_errors in form.errors.values %} {% for error in field_errors%}
-        <p>{{ error }}</p>
-        {% endfor %} {% endfor %}
-    </div>
-    {% endif %}
+<body class="flex flex-col h-screen">
+  {% include 'navbar.html' %}
+  {% for message in messages %} {{message}} {% endfor %}
 
-    <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
-        <div class="mx-auto max-w-lg text-center">
-            <h1 class="text-2xl font-bold sm:text-3xl">Log in!</h1>
+  <div class="flex-grow flex-shrink-0 flex items-center justify-center">
+      <div class="bg-gray-200 shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col">
+          <h2 class="mb-4 text-gray-800 text-xl font-bold text-center">Log in!</h2>
 
-            <p class="mt-4 text-gray-500">
-                Login to Manage Your College Experience
-            </p>
-        </div>
+          <form method="POST" class="space-y-4">
+              {% csrf_token %}
+              <div>
+                  {{form.username.label}}
+                  <input type="text" name="{{form.username.name}}" class="appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:ring-teal-500 focus:border-teal-500" required>
+              </div>
 
-        <form method="POST" class="mx-auto mt-8 mb-0 max-w-md space-y-4">
-            {% csrf_token %}
-            <div>
-                {{form.username.label}}
+              <div>
+                  {{form.password.label}}
+                  <input type="password" name="{{form.password.name}}" class="appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:ring-teal-500 focus:border-teal-500 " required>
+              </div>
 
-                <div class="relative">
-                    {{form.username}}
-
-                    <span class="absolute inset-y-0 right-0 grid place-content-center px-4">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-4 w-4 text-gray-400"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207"
-                />
-              </svg>
-            </span>
-                </div>
-            </div>
-
-            <div>
-                {{form.password.label}}
-
-                <div class="relative">
-                    {{form.password}}
-
-                    <span class="absolute inset-y-0 right-0 grid place-content-center px-4">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-4 w-4 text-gray-400"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
-                />
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
-                />
-              </svg>
-            </span>
-                </div>
-            </div>
-
-            <div class="flex items-center justify-between">
-                <p class="text-sm text-gray-500">
-                    No account?
-                    <a class="underline" href="">Sign up</a>
-                </p>
-
-                <button type="submit" class="inline-block rounded-lg bg-blue-500 px-5 py-3 text-sm font-medium text-white">
-            Sign in
-          </button>
-            </div>
-        </form>
-    </div>
+              <button type="submit" class="mx-auto bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded">
+                  Sign In
+              </button>
+          </form>
+      </div>
+  </div>
 </body>
+
+
 
 </html>
