--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -174,44 +174,40 @@
       <div class="text-center text-lg font-bold mt-4">
         Semester {{semester}}
       </div>
-      <div id="table-div" class="flex justify-center pt-5">
-        <div class="flex items-center justify-center">
-          <table class="table-auto border border-gray-300 mx-auto">
-            <thead>
-              <tr class="bg-gray-100">
-                <th class="px-8 py-2 border-r border-gray-400">Username</th>
-                <th class="px-8 py-2 border-r border-gray-400">First Name</th>
-                <th class="px-8 py-2 border-r border-gray-400">Last Name</th>
-                <th class="px-8 py-2 border-r border-gray-400">Email</th>
-                <th class="px-8 py-2 border-r border-gray-400">Phone Number</th>
-                <th class="px-8 py-2 border-r border-gray-400">Address</th>
-                <th class="px-8 py-2 border-r border-gray-400">Faculty</th>
-                <th class="px-8 py-2 border-r border-gray-400">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for student in students %}
-              <tr class="hover:bg-gray-50">
-                <td class="border px-4 py-2">{{student.username}}</td>
-                <td class="border px-4 py-2">{{student.first_name}}</td>
-                <td class="border px-4 py-2">{{student.last_name}}</td>
-                <td class="border px-4 py-2">{{student.email}}</td>
-                <td class="border px-4 py-2">{{student.phone_number}}</td>
-                <td class="border px-4 py-2">{{student.address}}</td>
-                <td class="border px-4 py-2">{{student.faculty}}</td>
-                <td class="border px-4 py-2">
-                  <!-- <button hx-post="/delete_account/{{student.username}}" hx-target="#table-div">Delete</button> -->
-                  <a
-                    class="hover:text-teal-500"
-                    href="{% url 'delete-account' student.username%}"
-                  >
-                    Delete
-                  </a>
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+      <div class="md:px-32 py-8 w-full h-auto flex items-center justify-center pt-5 mb-20 lg:mb-0 ">
+        <div class="shadow overflow-hidden rounded border-b border-gray-200" >
+            <div class="overflow-x-auto">
+                <table class="w-full table-auto">
+                    <thead class="bg-gray-800 text-white">
+                        <tr>
+                            <th class=" text-left py-3 px-4 uppercase font-semibold text-sm">Username</th>
+                            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">First Name</th>
+                            <th class=" text-left py-3 px-4 uppercase font-semibold text-sm">Last name</th>
+                            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Email</th>
+                            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Phone Number</th>
+                            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Adress</th>
+                            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Faculty</th>
+                                <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-gray-700">
+                        {% for student in students %}
+                        <tr class="hover:bg-gray-100">
+                            <td class=" md:w-auto text-left py-3 px-4">{{student.username}}</td>
+                            <td class=" md:w-auto text-left py-3 px-4">{{student.first_name}}</td>
+                            <td class=" md:w-auto text-left py-3 px-4">{{student.last_name}}</td>
+                            <td class="text-left py-3 px-4 md:table-cell">{{student.email}}</td>
+                            <td class="text-left py-3 px-4 md:table-cell">{{student.phone_number}}</td>
+                            <td class="text-left py-3 px-4 md:table-cell">{{student.address}}</td>
+                            <td class="text-left py-3 px-4 md:table-cell">{{student.faculty}}</td>
+                            <td class="text-left py-3 px-4 md:table-cell">
+                                <a class="hover:text-teal-500" href="{% url 'delete-account' student.username%}">Delete</a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
       </div>
     </div>
